# git-file-vault

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  build.rs
.github/: release-template.md
.github/workflows/: release.yml
docs/: KNOWN_ISSUES.md  OVERVIEW.md  TODO.md
docs/commands/: add.md  alias.md  backup.md  clone.md  config.md  init.md  link.md  list.md  pull.md  push.md  remove.md  restore.md  status.md  sync.md  unlink.md  vault.md
docs/commands/future/: sync.md
src/: ai.rs  cli.rs  commands.rs  config.rs  error.rs  git_ops.rs  main.rs  vault.rs
src/commands/: add.rs  alias.rs  backup.rs  config.rs  debug.rs  helpers.rs  init.rs  link.rs  list.rs  remove.rs  restore.rs  status.rs  unlink.rs  vault.rs
src/vault/: manifest.rs
