[package]
name = "git-file-vault"
version = "0.1.0"
edition = "2021"
authors = ["billxc"]
description = "Git-based file version management tool for syncing configuration files"
license = "MIT"
repository = "https://github.com/billxc/git-file-vault"

[[bin]]
name = "gfv"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Git operations
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File operations
walkdir = "2.5"
dirs = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for AI
reqwest = { version = "0.12", features = ["json"], optional = true }

# Async runtime
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"], optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal colors
colored = "2.1"

[features]
default = ["ai"]
ai = ["reqwest", "tokio"]

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
